...
    "Change email address" : {

    },
    "Change Role" : {

    },
    "Change role selection" : {

    },
    "Charts and recruiting insights" : {
      "comment" : "Text for the analytics section of the More menu.",
      "isCommentAutoGenerated" : true
    },
...
    "Follow-ups" : {

    },
    "For your security, we signed you out after a period of inactivity. Log back in to continue." : {

    },
    "Forgot password" : {
      "comment" : "A button that opens a screen for password recovery.",
      "isCommentAutoGenerated" : true
    },
    "Forgot password?" : {

    },
...

    },
    "Sign In Required" : {
      "comment" : "A view that displays a message and a system icon.",
      "isCommentAutoGenerated" : true
    },
    "Sign in to account" : {

    },
    "Sign in to existing account" : {

    },
    "Sign in to your account" : {
      "comment" : "A hint for the user to enter their email and password when signing in.",
      "isCommentAutoGenerated" : true
    },
    "Sign in with Face ID" : {
      "comment" : "A title for the biometric lock screen.",
      "isCommentAutoGenerated" : true
...
